I'm tring to follow Semantic Versioning 2.0.0
http://semver.org/

=V0.0.2=
2015-04-05
* added link to static www for sharing

2015-04-04
* added (un)favoriting connections of registered users
* sorting peers by favorited, email, nickname, peer ID

2015-04-02
* logging in puts the current peerId in the registered emails table so that unconnected users can see verified accounts
* logout also erases last peerId from registered emails table so that unconnected users stop seeing verified accounts
* app displays verified accounts with emails in parentheses
* logging in now one-step instead of two-steps
* remembering/forgetting credentials
* split out dynamo controller from peer controller
* added support for multiple saved emails

2015-04-01
* added email to protect a nickname... have yet to test
* turns out my design was shit... split out nicknames from emails
* now can register email,pwd,and metadata separate from nickname submission
* duplicate nicknames allowed ATM

2015-03-31
* added nicknames posted to bulletin on server
** needed since peerjs doesn't support similar functionality
** also added a password to protect a user's nickname
** password is generated internally by javascript

=V0.0.1=
2015-02-28
* added "saved" section with server saved games

2015-02-27
* added "Saved" section with locally saved games

=V0.0.0=
2015-02-26
* when nickname is empty, the ID of the server is shown on the server's peer list instead of the ID of the connector peer
* showing IDs even if nick is given
* make table instead of li
* Connect -> "+", disconnect -> "x", Me -> glyph
* removed delete peer since the refresh button autocleans the list
* no more prompt for nickname
* connected peers are in bold
* now i think this is ready to roll to the store

2015-02-25
* added peer discovery to server and clients
* added nickname + can update nicknames
* removed main menu
* simplified "Connect" tab

2015-02-24
* re-tested on tablet