@@ -1,3 +1,5 @@
+* why do I get "network" error and why does it fail to reconnect
 * got to make my own heartbeat from admin2 to admin1
 ** because when admin1 disconnected from wifi on tablet, no disconnect event was fired for admin2 in browser
 * disconnect button causes root scope in progress error in angular
+* server saved tournaments and local tournaments: too many buttons, don't fit horizontally on small phone
